--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <body>
     <h1>Mika Illouz</h1>
 
-    <p>Contact: <a href="mailto:mika@illouz.net">email</a>,
+    <p><img src="woof.png" width="100" height="100"></p>
+
+    <p>email: <a href="mailto:mika@illouz.net">mika@illouz.net</a>,
       <a href="https://github.com/barko">GitHub</a></p>
 
     <p>Here are some of the things I've done professionally:</p>
@@ -32,8 +34,7 @@
 	software engineers and researchers at this consumer internet
 	company through its acquisition. Led the design, development,
 	and implementation of company’s core product from inception as
-	demo project, to live consumer offering and then to company
-	acquisition.
+	demo project.
       </li>
 
       <li><b>Engineer</b>: At DemandTec, I developed statistical
